Fix text alignment on read more button and reduze size of our team banner text on desktop.

--- a/themes/catalyst/sass/_news-media.scss
+++ b/themes/catalyst/sass/_news-media.scss
@@ -19,6 +19,7 @@
     }
     .navigation-button {
         @include navigation-button();
+        display: block;
     }
     .newsmedia-content {
         .widget-area {
